--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			  }
 			  input
 			  {
-				width:60px;
+				width: 120px;
 			  }			  			  
 		  </style>
       </head>
@@ -44,12 +44,7 @@
 					       </select>
 						</td>
 						<td>
-					        <select>
-								<option> JU</option>
-								<option> DU</option>
-								<option> UIU</option>
-								<option> ULAB</option>
-					        </select>
+					        <input type ="text">
 						</td>
 						<td>
 					        <select>
@@ -99,12 +94,7 @@
 													'<option> SSC</option>'+
 												'</select>'+
 										   '<td>'+
-												'<select>'+
-													'<option>JU</option>'+
-													'<option>DU</option>'+
-													'<option> UIU</option>'+
-													'<option> ULAB</option>'+
-												'</select>'+
+											    '<input type ="text">'+
 										   '</td>'+
 										   '<td>'+
 												'<select>'+
